--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -1,15 +1,15 @@
 {% extends "posts/post_base.html" %}
-{% load bootstrap3 %}
+{% load bootstrap4 %}
 
 {% block main_content_posts %}
 <div>
 	<h4> Create a New Post</h4>
 	<form action="{% url "posts:create" %}" method="POST">
 		{% csrf_token %}
-		{% bootstrap_form form %}
-		<input type="submit" value="Post" class="btn btn-primary btn-lg">
-
-
+	        {% bootstrap_form form %}
+	        {% buttons %}
+		    <button type="submit" class="btn btn-primary btn-large">Post</button>
+	        {% endbuttons %}
 
 	</form>
 
